--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "^3.4.15",
